# docrag

./: .env  .gitignore  environment_cpu.yml  models_dump.txt  pyproject.toml  runtime_requirements.in  runtime_requirements.txt
docs/: ENV_MANAGMENT.html  ENV_MANAGMENT.md
scripts/bash/: push_samples.sh
scripts/misc/: sample_dataset.py
scripts/python/: flatten_tatdqa.py  standardize_documents.py  unify.py
scripts/slurm/: convert_documents.slurm  download_arxivqa.sh  push_to_hub.slurm  unify.slurm  unify_arxivqa.sh  unify_dude.sh  unify_mmlongbenchdoc.sh  unify_mpdocvqa.sh
src/docrag/datasets/: __init__.py  base.py  features.py  hf.py  load.py  loader.py  loading.py  processing.py  utils.py
src/docrag/datasets/index/: __init__.py
src/docrag/demo/: generation.py  ingestion.py  main.py  rag.py  retrieval.py  retrieve.py  ui.py
src/docrag/generation/: adapter.py  generator.py  inference.py  registry.py
src/docrag/generation/adapters/: internvl.py  qwen.py
src/docrag/models/: __init__.py  dataset.py  enums.py  unified.py
src/docrag/schema/: #%2Aediff-merge%2A#Kt7XBl#  __init__.py  dataset.py  enums.py  model_settings.py  rag.py  raw.py  raw_entry.py  unified_entry.py  utils.py
src/docrag/schema/config/: generator.py
src/docrag/schema/inputs/: generator.py  retriever.py
src/docrag/schema/outputs/: generator.py
src/docrag/unification/: __init__.py  arxivqa.py  dude.py  mmlongbenchdoc.py  mpdocvqa.py  registry.py  slidevqa.py  tatdqa.py  unifier.py
src/docrag/unify/: __init__.py  arxivqa.py  base.py  dude.py  mmlongbenchdoc.py  mpdocvqa.py  slidevqa.py  tatdqa.py  unifier.py
src/docrag/utils/: logger.py
