[project]
name = "docrag"
version = "0.1.0"
description = ""
authors = [
    {name = "AHS-uni",email = "abdhatemsh.uni@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic (>=2.11.4,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "datasets (>=3.6.0,<4.0.0)",
    "datasets[vision] (>=3.6.0,<4.0.0)",
    "pillow (>=11.2.1,<12.0.0)"
]

[tool.poetry]
packages = [{include = "docrag", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
