[project]
name            = "docrag"
version         = "0.1.0"
description     = ""
authors         = [{ name = "AHS-uni", email = "abdhatemsh.uni@gmail.com" }]
readme          = "README.md"
requires-python = ">=3.12"

[tool.poetry]
packages = [{ include = "docrag", from = "src" }]

# ─────────────── Runtime dependencies ───────────────
[tool.poetry.dependencies]
python             = ">=3.12,<4.0"
pydantic           = ">=2.11.4,<3.0.0"
pydantic-settings  = ">=2.9.1,<3.0.0"
datasets           = { version = ">=3.6.0,<4.0.0", extras = ["vision"] }
pillow             = ">=11.2.1,<12.0.0"

# CPU-only wheels (pinned to the extra index below)
torch              = { version = "2.7.0+cpu", source = "pytorch-cpu" }
torchvision        = { version = "0.22.0+cpu", source = "pytorch-cpu" }

# ─────────────── Dev-only deps ───────────────
huggingface-hub = {extras = ["cli"], version = "^0.31.4"}
[tool.poetry.group.dev.dependencies]
pipdeptree = "^2.26.1"

# ─────────────── Extra package source ───────────────
[[tool.poetry.source]]
name    = "pytorch-cpu"
url     = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires      = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
