[project]
name = "docrag"
version = "0.1.0"
description = ""
authors = [{ name = "AHS-uni", email = "abdhatemsh.uni@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
             "numpy<2",
             "pydantic>=2.11",
             "pydantic-settings>=2.9",
             "datasets[vision]>=3.6",
             "pillow>=11"
]

[tool.poetry]
packages = [{ include = "docrag", from = "src" }]

[tool.poetry.group.dev.dependencies]
jupyter-resource-usage = "^1.1.1"
pipdeptree = "^2.26"
ruff = "^0.11.12"
pytest = "^8"

[tool.ruff]
target-version = "py312"

[build-system]
requires = ["poetry-core>=2.0,<3.0"]
build-backend = "poetry.core.masonry.api"
